--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "7.65.0",
+    "react-intersection-observer": "^10.0.0",
+    "react-photo-view": "^1.2.7",
     "sonner": "2.0.7",
     "tailwind-merge": "3.3.1",
     "zod": "4.1.12",
