--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
     "@radix-ui/react-slot": "1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
     "@tanstack/react-query": "5.90.5",
+    "@uiw/react-markdown-preview": "^5.1.5",
+    "@uiw/react-md-editor": "^4.0.8",
     "axios": "1.13.0",
     "class-variance-authority": "0.7.1",
+    "dompurify": "^3.3.0",
     "lucide-react": "0.548.0",
+    "marked": "^17.0.0",
     "next": "15.5.6",
     "next-themes": "0.4.6",
     "react": "18.2.0",
@@ -27,6 +31,7 @@
     "react-photo-view": "^1.2.7",
     "sonner": "2.0.7",
     "tailwind-merge": "3.3.1",
+    "turndown": "^7.2.2",
     "zod": "4.1.12",
     "zustand": "5.0.8"
   },
