--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/turndown": "^5.0.6",
     "autoprefixer": "10.4.21",
     "eslint": "9.38.0",
     "eslint-config-next": "15.5.6",
