--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@uiw/react-md-editor": "^4.0.8",
     "axios": "1.13.0",
     "class-variance-authority": "0.7.1",
+    "date-fns": "^3.6.0",
     "dompurify": "^3.3.0",
     "lucide-react": "0.548.0",
     "marked": "^17.0.0",
