--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "7.65.0",
+    "react-icons": "^5.5.0",
     "react-intersection-observer": "^10.0.0",
     "react-photo-view": "^1.2.7",
     "sonner": "2.0.7",
