--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@dnd-kit/utilities": "^3.2.2",
     "@headlessui/react": "^2.2.9",
     "@hookform/resolvers": "^3.10.0",
+    "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-dialog": "1.1.15",
+    "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-popover": "1.1.15",
     "@radix-ui/react-slot": "1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
@@ -25,6 +27,8 @@
     "class-variance-authority": "0.7.1",
     "date-fns": "^3.6.0",
     "dompurify": "^3.3.0",
+    "embla-carousel-autoplay": "^8.6.0",
+    "embla-carousel-react": "^8.6.0",
     "lucide-react": "0.548.0",
     "marked": "^17.0.0",
     "next": "15.5.6",
